--- a/helloHexo/package.json
+++ b/helloHexo/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "hexo": "^3.8.0",
     "hexo-autoprefixer": "^2.0.0",
+    "hexo-deployer-heroku": "^0.1.2",
     "hexo-filter-cleanup": "^1.2.0",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
