--- a/helloHexo/package.json
+++ b/helloHexo/package.json
@@ -5,6 +5,9 @@
   "hexo": {
     "version": "3.8.0"
   },
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "hexo": "^3.8.0",
     "hexo-autoprefixer": "^2.0.0",
