--- a/helloHexo/package.json
+++ b/helloHexo/package.json
@@ -6,7 +6,7 @@
     "version": "3.8.0"
   },
   "scripts": {
-    "start": "./node_modules/.bin/hexo server"
+    "start": "node test.js"
   },
   "dependencies": {
     "hexo": "^3.8.0",
