--- a/helloHexo/package.json
+++ b/helloHexo/package.json
@@ -29,5 +29,9 @@
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "object-assign": "^4.1.1"
+  },
+  "engines": {
+    "node": "10.15.3",
+    "npm": "6.9.0"
   }
 }
